= CLI Changelog

== 3.0.2 (2021-10-06)

Bugfixes:

* `globus task cancel --all` no longer throws a TypeError.

== 3.0.1 (2021-09-29)

Bugfixes:

* Update dependency specification to avoid an issue in which old versions of
  `cryptography` were not updated when an existing installation was updated

== 3.0.0 (2021-09-29)

This is a major release of the CLI and has several backwards incompatible
changes. See the Backwards Incompatible Changes list below.

Bugfixes:

* Fix a bug in which some error outputs could be sent to stdout

Enhancements:

* `globus endpoint show` now includes the description field. Formatting of the
  description may wrap
* `globus session update` now supports domains for
  `session_required_single_domain` requirements
* globus-cli now uses more advanced token storage, and does not use
  `~/.globus.cfg`. A `globus login` with this version will invalidate any CLI
  tokens found in `~/.globus.cfg`
** Note: this version of the CLI will not modify the `~/.globus.cfg` file, only
   invalidate CLI version 2 tokens. After the upgrade, you may remove this file
   if you are not using it for other purposes.
* globus-cli now supports use of the `GLOBUS_PROFILE` environment variable,
  which lets users name sets of credentials and switch between accounts
* globus-cli commands can now direct the user to login to a specific Globus
  Connect Server v5 Endpoint. When the requirements for running a command are
  not met, a message with the correct login command will be shown.
* A new environment variable, `GLOBUS_CLI_INTERACTIVE` can be used to instruct the
  CLI to behave as though it is or is not in an interactive shell. Set
  `GLOBUS_CLI_INTERACTIVE=0` to force non-interactive behavior, and
  `GLOBUS_CLI_INTERACTIVE=1` to force interactive behavior
* Add new collection-related commands for Mapped and Guest Collections
** `globus collection list`
** `globus collection show`
** `globus collection update`
** `globus collection delete`