@@ -75,18 +75,4 @@ Releasing a Version
 -------------------
 
 If you are a CLI maintainer, you need to be able to do a release.
-
-Setup:
-
-  - Make sure you have a pypi account
-  - Setup your credentials for twine (the pypi upload tool)
-      https://github.com/pypa/twine[twine docs for detail]
-  - Make sure you have a gpg key setup for use with git.
-      https://git-scm.com/book/en/v2/Git-Tools-Signing-Your-Work[git-scm.com guide for detail]
-
-Do it:
-
-  - `make release` to build dists, upload via twine, and tag the release
-  - push the newly created version tag to GitHub
-  - Ensure that `docs.globus.org` gets updated with new docs/changelog
-      Procedure is set in that repo.
+For steps, see the link:./RELEASING[RELEASING doc].
