@@ -1,0 +1,19 @@
+<!--
+A new scriv changelog fragment.
+
+Uncomment the section or sections which match your change. Use "Other" for all
+changes which do not match a different section.
+
+Fill in one or more bullet points with details of your change.
+
+Make sure you add the new file in `changelog.d/` to your pull request!
+-->
+
+{% for cat in config.categories -%}
+<!--
+### {{ cat }}
+
+- A bullet item for the {{ cat }} category.
+
+-->
+{% endfor -%}
