@@ -23,3 +23,11 @@ addopts = --cov=src --no-cov-on-fail --timeout 3
 filterwarnings =
     # warnings are errors, like -Werror
     error
+
+[scriv]
+version = literal: src/globus_cli/version.py: __version__
+categories = Bugfixes, Enhancements, Other
+# we're using adoc, we'll produce fragments as 'md' and "fix" later
+format = md
+output_file = changelog.adoc
+entry_title_template = {{ version }} ({{ date.strftime("%%Y-%%m-%%d") }})
