@@ -58,6 +58,13 @@ commands_pre = rm -rf dist/
 commands = python setup.py sdist bdist_wheel
            twine check dist/*
 
+[testenv:prepare-release]
+skip_install = true
+deps = scriv
+commands =
+    scriv collect
+    python ./changelog.d/post-fix-changelog.py changelog.adoc
+
 [testenv:publish-release]
 skip_install = true
 deps = twine
